--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "homepage": "https://voskii.github.io"
+
   },
   "eslintConfig": {
     "extends": [
